k8s/05-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: my-application-placeholder
  labels:
    app: spring-boot-api
spec:
  type: ClusterIP
  selector:
    app: spring-boot-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
