k8s/08-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: my-application-placeholder
  labels:
    app: react-frontend
spec:
  type: ClusterIP
  selector:
    app: react-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
